--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -218,3 +218,19 @@ body {
     background: darken(#EF7824, 15%);
   }
 }
+
+footer {
+  background: #e9e9e9;
+  text-align: center;
+  padding: 40px 20px; 
+  font-size: 12px;
+  margin: 50px 0 0;
+  line-height: 23px;
+
+  a {
+    color: rgb(29, 111, 158);
+    &:hover {
+      color: rgb(18, 81, 117);
+    }
+  }
+}
