--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -234,3 +234,68 @@ footer {
     }
   }
 }
+
+.modal-enter {
+  opacity: 0;
+  transition: 200ms;
+}
+.modal-enter-active {
+  opacity: 0.5;
+  transition: 200ms;
+}
+.modal-enter-done {
+  opacity: 1;
+  transition: 200ms;
+}
+.modal-exit {
+  opacity: 1;
+}
+.modal-exit-active {
+  opacity: 0.5;
+  transition: 200ms;
+}
+.modal-enter-done {
+  opacity: 0;
+  transition: 200ms;
+}
+
+.modal {
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  background: none;
+  z-index: 999;
+
+  .modal-close {
+    cursor: pointer;
+    background: none;
+    border: none;
+
+    &:hover {
+
+    }
+  }
+
+  .modal-content {
+    padding: 30px;
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    max-width: 500px;
+    min-height: 300px;
+    background: red;
+  }
+
+  .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: rgba(0,0,0,0.8);
+  }
+}
