--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -190,6 +190,7 @@ body {
           width: 10px;
           height: 10px;
           background: #fff;
+          transition: 400ms;
         }
 
         .verde {
