--- a/styles/components/ParticipanteItem.module.scss
+++ b/styles/components/ParticipanteItem.module.scss
@@ -107,7 +107,7 @@
     }
   }
 
-  .btnBebi, .btnNaoBebi {
+  .btnBebi, .btnNaoBebi, .btnEncerrado {
     background: #ff5512;
     color: #fff;
     font-size: 20px;
@@ -133,53 +133,11 @@
   }
 }
 
-
-.item {
-  position: relative;
-  width: 300px;
-  height: 100px;
-  pointer-events: auto;
-  transform-origin: 50% 50% 0px;
-  padding-left: 32px;
-  padding-right: 32px;
-  box-sizing: border-box;
-  display: grid;
-  align-items: center;
-  text-align: center;
+.txtEncerrado {
+  padding: 20px;
+  margin: 10px 0 0;
   border-radius: 5px;
-  box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.2);
-}
-
-.fg {
-  cursor: -webkit-grab;
-  background-color: #272727;
-  color: rgba(255, 255, 255, 0.8);
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  display: grid;
-  align-items: center;
+  background: #e6d7cd;
+  color: #613A3F;
   text-align: center;
-  border-radius: 5px;
-  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.2);
-  font-size: 3em;
-
-  font-weight: 600;
-  transition: box-shadow 0.75s;
-}
-
-.fg:active {
-  cursor: -webkit-grabbing;
-  box-shadow: 0px 15px 30px -5px rgba(0, 0, 0, 0.4);
-}
-
-.fg > * {
-  pointer-events: none;
-}
-
-.av {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: white;
 }
